Added button click event

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Hub Finder</title>
     <script src="js/vendor/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="hubfinder.js"></script>
+    <script type="text/javascript" src="js/application/hubfinder.js"></script>
     <style>
         span.list {
             float: left;
