--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Hub Finder</title>
     <script src="js/vendor/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript" src="js/application/hubfinder.js"></script>
     <style>
         span.list {
@@ -25,12 +26,12 @@
 <body>
     <h2>Hub Finder</h2>
     <span class="list">
-        <h3>Hub Addresses (one per line)</h3>
-        <textarea class="inputlist" id="hublist"></textarea>
-    </span>
-    <span class="list">
         <h3>Addresses to Find (one per line)</h3>
         <textarea class="inputlist" id="addresslist"></textarea>
+    </span>
+    <span class="list">
+        <h3>Hub Addresses (one per line)</h3>
+        <textarea class="inputlist" id="hublist"></textarea>
     </span>
     <div>
         <input type="button" id="findhubsbutton" value="Find Hubs" />
