--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="js/vendor/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript" src="js/application/hubfinder.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/hubfinder.css">
+    <link rel="stylesheet" type="text/css" href="css/hubfinder.css" />
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         <h3>Hub Addresses (one per line)</h3>
         <textarea class="inputlist" id="hublist"></textarea>
     </span>
-    <div id="button">
+    <div class="button">
         <input type="button" id="findhubsbutton" value="Find Hubs" />
     </div>
     <div class="results">
